--- a/page1_en.html
+++ b/page1_en.html
@@ -36,9 +36,9 @@
 
             <div class="col-md-4">
                 <div class="list-group">
-                  <a href="index_en.html" class="list-group-item"><center>Documentation required</center></a>
-                  <a href="page1_en.html" class="list-group-item active"><center>Renewal Process</center></a>
-                  <a href="page2_en.html" class="list-group-item"><center>Tips to speed up the process</center></a>
+                  <a href="index_en.html" class="list-group-item"><center>Necessary Documents</center></a>
+                  <a href="page1_en.html" class="list-group-item active"><center>Periodic Maintenance</center></a>
+                  <a href="page2_en.html" class="list-group-item"><center>Tips to expedite the certification process</center></a>
                 </div>
             </div>
 
@@ -48,33 +48,36 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                        <p class="accordion-toggle"><center>Renewal Process</center></p>
+                                        <p class="accordion-toggle"><center>Periodic Maintenance</center></p>
                                     </h4>
                                 </div>
                                     <div class="panel-body">
                                       <p align="justify">
-                                        For a renewal process, there are some factors that need to be considered in order to determine whether tests are applicable or if we can proceed with the renewal only with the documentation. They are the following:<br>
-                                         1 - If the product has been modified since the last certification or not;<br>
-                                         2 - If ANATEL changed the rules during the period;<br>
-                                         3 - If the product presented any non-conformity in the initial certification that became necessary to modify the product in order to attend the regulation;<br>
-                                         4 - If it is applicable the Resolution 529 (Safety Testing). If so, it is required to repeat this test in the renewal, even if the answer to the previous items is “No”. <br><br>
+                                        For a certification maintenance process, there are some factors that need to be assessed to determine if the tests are applicable or if we can do the maintenance only with documentary evidences. These are:<br>
+                                         1- If the product underwent changes or not since its last certification;<br>
+                                         2 - If ANATEL changed the regulation during the period;<br>
+                                         3 - If the product presented some non-compliance in the initial certification and any change for adequacy has become necessary;<br>
+                                         4 - If Resolution 529 (Safety Tests) is applicable to the product. If positive, it is required that this test is repeated during maintenance, regardless of the answers from previous items.<br>
 
-                                         Documentation needed when the product has not suffered changes:<br>
-                                        • Renewal Letter (we can provide you a template)<br>
-                                        • Current external pictures<br>
-                                        • Current internal pictures<br>
-                                        • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
-                                        • ISO 9001 2008 Certificate for the factory (when applicable)<br><br>
+                                         Documentation for the product that has not underwent change<br>
+                                        • Maintenance Declaration (we provide the template)<br>
+                                        • External current pictures of the product <br>
+                                        • Internal current pictures of the product<br>
+                                        • Tests Reports (the need or not of tests will be confirmed after assessment of 4 items above)<br>
+                                        • ISO 9001 Certificate of the Manufacturing Facility - when applicable<br>
 
-                                         Documentation needed when the product has suffered changes:<br>
-                                        • Renewal Letter (we can provide you a template)<br>
-                                        • Current external pictures<br>
-                                        • Current internal pictures<br>
-                                        • ISO 9001 2008 Certificate for the factory (when applicable)<br>
-                                        • Test reports (it will be confirmed if tests are needed or not after we check the 04 items listed previously)<br>
-                                        • Product Manual (in case it has been updated)<br>
-                                        • Technical specification (in case it has been updated)<br>
-                                        • Electric scheme<br>
+                                         Documentation for the product that underwent change <br>
+                                        • Maintenance Declaration (we provide the template)<br>
+                                        • External current pictures of the product<br>
+                                        • Internal current pictures of the product<br>
+                                        • Picture of the model identification label<br>
+                                        • ISO 9001 Certificate of the Manufacturing Facility - when applicable<br>
+                                        • Tests Reports (the need or not of tests will be confirmed after assessment of 4 items initially described)<br>
+                                        • Product Manual <br>
+                                        • Technical Specification <br>
+                                        • Electric Scheme<br>
+                                        PS: Some products classified as “category III” may require maintenance too. <br>
+                                        Please contact us for more details.<br>
                                       </p>
                                     </div>
                             </div>
