--- a/page2_en.html
+++ b/page2_en.html
@@ -36,9 +36,9 @@
 
             <div class="col-md-4">
                 <div class="list-group">
-                  <a href="index_en.html" class="list-group-item"><center>Documentation required</center></a>
-                  <a href="page1_en.html" class="list-group-item"><center>Renewal Process</center></a>
-                  <a href="page2_en.html" class="list-group-item active"><center>Tips to speed up the process</center></a>
+                  <a href="index_en.html" class="list-group-item"><center>Necessary Documents</center></a>
+                  <a href="page1_en.html" class="list-group-item"><center>Periodic Maintenance</center></a>
+                  <a href="page2_en.html" class="list-group-item active"><center>Tips to expedite the certification process</center></a>
                 </div>
             </div>
 
@@ -48,24 +48,24 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                        <p class="accordion-toggle"><center>Tips to speed up the process</center></p>
+                                        <p class="accordion-toggle"><center>Tips to expedite the certification process</center></p>
                                     </h4>
                                 </div>
                                     <div class="panel-body">
                                     <p align="justify">
-                                        - Send the product specification containing the complete information regarding the product, as items below. The complete information avoids rework, unexpected delays and costs in the process:<br><br>
+                                      - Submit the technical specification of the product containing all the complete information of the product, according to items below. This avoids reworks, delays and unexpected costs in the process:<br>
+                                    - Product operating frequency<br>
+                                    - Applicable technologies <br>
+                                    - Product application<br>
+                                    - Installation site<br>
+                                    - If the product can be operated by a common user or only by specialized professionals<br>
+                                    - Supply of the product (e.g. battery, power supply, car charger, USB, etc.)<br>
+                                    - When preparing the samples for submission, assures that they are properly identified. <br>
+                                    e.g. If the model of the product under certification is "model X", it is very important that there is a label in the samples or any kind of identification showing this model name described in the product;
+                                    - When submitting the samples to Laboratory is recommended to specify the number of the process (Versys process number) in the package and that there are instructions for carrying the tests.<br>
+                                    This way, the project is quickly identified and we can quickly interact with the laboratory with the instructions, in order also to expedite the performance of the tests;
+                                    - Refer all documentation of the certification process before the issuance of the tests reports. With that, we can avoid delays and perform a partial assessment of what has been sent to provide you with a feedback on possible necessary corrections;<br>
 
-                                        - Frequency Band<br>
-                                        - Applicable Technologies<br>
-                                        - Product Application<br>
-                                        - Where the product is installed<br>
-                                        - If the product can be operated by the final user or only by professionals<br>
-                                        - How the product is supplied (Example: battery, power supply, car charger, USB ... etc);<br>
-                                        - When preparing the samples for the shipment, make sure they are correctly identified with model name.<br><br>
-                                        Example: If the model name of the product under certification is "Model X", it is very important that the samples have a label or any identification that shows this model name;<br>
-                                        - When sending the samples to the Versys it is highly recommended that you describe on the package, the Versys project number and also send instructions for testing.<br><br>
-                                        With this, the project can be identified quickly and with the instructions we can interact with the laboratory in order to speed up the testing;<br>
-                                        - Send all documents before the issuance of the test reports. With this, we will avoid delays, as we can have partial evaluations and provide you a feedback confirming if corrections are needed or not.<br>
                                       </p>
                                     </div>
                             </div>
